segundo, cambios en nav y en titulos

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <section id="home">
     <div class="home-izquierda">
         <h1 class="titulo-home">
-            JERLY SECURITY
+            DAMOS PROTECCIÓN A TU MUNDO.
         </h1>
-        <p class="subtitulo-home">Damos protección a tu mundo</p>
+        <!-- <p class="subtitulo-home">Damos protección a tu mundo</p> -->
         <div class="separador-home">
             <p class="parrafo-home">Proveemos soluciones integrales combinando eficacia, eficiencia, profesionalismo e innovación.</p>
         </div>
@@ -47,12 +47,12 @@
 <section id="nosotros">
 
 <div class="conteiner claro">
-    <h2 class="titulo-secundario tituloOscuro">Quienes somos</h2>
     <div class="nosotros-gral">
         <div class="nosotros-izquierda">
             <img src="Assets/img/jerly-quienes.jpg" alt="nosotrosimg">
         </div>
         <div class="nosotros-derecha">
+            <h2 class="titulo-secundario tituloCeleste">Quienes somos</h2>
             <p class="p-nosotros">Somos una empresa de seguridad que combina Eficacia, Eficiencia, Profesionalismo e Innovación en la búsqueda de soluciones integrales para cada uno de nuestros clientes.
                 <br>
                 <br>
@@ -66,7 +66,7 @@
 
 <section class="nosotros2">
     <div class="conteiner">
-        
+
     </div>
 </section>
 
