--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="Assets/css/home.css">
     <link rel="stylesheet" href="Assets/css/nav.css">
     <link rel="stylesheet" href="Assets/fonts/bold/style.css" type = "text/css"/>
-    <link href="https://db.onlinewebfonts.com/c/e3f201520edfd80036162ca6e0d00852?family=MetronicProBold" rel="stylesheet">
     <link rel="stylesheet" href="Assets/css/style.css">
     <link rel="stylesheet" href="Assets/css/nosotros.css">
+    <link href="https://db.onlinewebfonts.com/c/e3f201520edfd80036162ca6e0d00852?family=MetronicProBold" rel="stylesheet">
     <title>Jerly Project 2</title>
 </head>
 <body>
@@ -37,8 +37,20 @@
             <button class="btn-secundario">CONOCENOS</button>
         </div>
     </div>
-    <div class="home-derecha">
-        <div class="home-foto">         
+    <div class="home-derecha slider-conteiner">
+        <div class="home-foto slider-content">
+            <div class="slide">
+                <img src="./Assets/img/bg2.png" alt="slide1">
+            </div>
+            <div class="slide">
+                <img src="./Assets/img/bg3copia.jpg" alt="slide2">
+            </div>
+            <div class="slide">
+                <img src="./Assets/img/bg4.png" alt="slide3">
+            </div>
+            <div class="slide">
+                <img src="./Assets/img/bg5.png" alt="slide5">
+            </div>
         </div>
 
     </div>
