--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Assets/fonts/bold/style.css" type = "text/css"/>
     <link rel="stylesheet" href="Assets/css/style.css">
     <link rel="stylesheet" href="Assets/css/nosotros.css">
+    <link rel="stylesheet" href="Assets/css/nosotros2.css">
     <link href="https://db.onlinewebfonts.com/c/e3f201520edfd80036162ca6e0d00852?family=MetronicProBold" rel="stylesheet">
     <title>Jerly Project 2</title>
 </head>
@@ -16,8 +17,8 @@
     <div class="navbar">
         <a href="#home"><img class=logo src="Assets/img/logo.png"></a>
         <ul class="navlinks">
-            <li class="link"><a href="">Inicio</a></li>
-            <li class="link"><a href="">Nosotros</a></li>
+            <li class="link"><a href="#home">Inicio</a></li>
+            <li class="link"><a href="#nosotros">Nosotros</a></li>
             <li class="link"><a href="">Certificaciones</a></li>
             <li class="link"><a href="">Servicios</a></li>
         </ul>
@@ -74,9 +75,34 @@
 </div>
 </section>
 
-<section class="nosotros2">
-    <div class="conteiner">
+<section id="nosotros2">
+    <div class="conteinerChico nosotros2">
+        <div class="tarjetas">
+            <div class="tarjeta">
+                <svg  xmlns="http://www.w3.org/2000/svg" width="60" fill="currentColor" class="bi bi-crosshair2" viewBox="0 0 16 16">
+                    <path d="M8 0a.5.5 0 0 1 .5.5v.518A7.001 7.001 0 0 1 14.982 7.5h.518a.5.5 0 0 1 0 1h-.518A7.001 7.001 0 0 1 8.5 14.982v.518a.5.5 0 0 1-1 0v-.518A7.001 7.001 0 0 1 1.018 8.5H.5a.5.5 0 0 1 0-1h.518A7.001 7.001 0 0 1 7.5 1.018V.5A.5.5 0 0 1 8 0Zm-.5 2.02A6.001 6.001 0 0 0 2.02 7.5h1.005A5.002 5.002 0 0 1 7.5 3.025V2.02Zm1 1.005A5.002 5.002 0 0 1 12.975 7.5h1.005A6.001 6.001 0 0 0 8.5 2.02v1.005ZM12.975 8.5A5.002 5.002 0 0 1 8.5 12.975v1.005a6.002 6.002 0 0 0 5.48-5.48h-1.005ZM7.5 12.975A5.002 5.002 0 0 1 3.025 8.5H2.02a6.001 6.001 0 0 0 5.48 5.48v-1.005ZM10 8a2 2 0 1 0-4 0 2 2 0 0 0 4 0Z"/>
+                  </svg>
+                <h3 class="tarjeta-titulo">Misión</h3>
+                <p class="tarjeta-parrafo">Proporcionar a nuestros clientes la más alta calidad en servicios de seguridad privada, con soluciones integrales a sus requerimientos, incluyendo permanente innovación tecnológica.</p>
+            </div>
+            <div class="tarjeta">
+                <svg  xmlns="http://www.w3.org/2000/svg" width="60"  fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
+                    <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
+                    <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"/>
+                  </svg>
+                <h3 class="tarjeta-titulo">Visión</h3>
+                <p class="tarjeta-parrafo">Posicionarnos como empresa líder en servicios de seguridad privada, garantizando un excelente desempeño en operaciones de seguridad, destacándonos por brindar soluciones de máxima calidad.
 
+                </p>
+            </div>
+            <div class="tarjeta">
+                <svg id="tarjeta-logo" xmlns="http://www.w3.org/2000/svg" width="60"  fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                  </svg>
+                <h3 class="tarjeta-titulo">Valores</h3>
+                <p class="tarjeta-parrafo">Calidad, Servicio, Trabajo en equipo, Responsabilidad social, Compromiso, Honestidad.</p>
+            </div>
+        </div>
     </div>
 </section>
 
